<?xml version="1.0" encoding="utf-8"?>
<!--
	~ SPDX-FileCopyrightText: 2020-2023 Hunter J Drum
	~ SPDX-FileCopyrightText: 2024-2025 MDP43140
	~ SPDX-License-Identifier: GPL-3.0-or-later
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:iconSpaceReserved="false">
	<PreferenceCategory android:title="@string/scanner_category_title" app:iconSpaceReserved="false">
		<Preference
			android:title="@string/blacklist"
			android:key="blacklist"
			android:summary="@string/blacklist_sum"
			app:iconSpaceReserved="false" />
		<Preference
			android:title="@string/whitelist"
			android:key="whitelist"
			android:summary="@string/whitelist_sum"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="one_click"
			android:persistent="true"
			android:summary="@string/oneclick_sum"
			android:title="@string/one_click_clean"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="boot_cleanup"
			android:persistent="true"
			android:summary="@string/clean_boot_sum"
			android:title="@string/clean_boot_title"
			app:iconSpaceReserved="false" />
		<SeekBarPreference
			android:min="-1"
			android:max="24"
			android:defaultValue="-1"
			android:key="clean_every"
			android:summary="@string/clean_hourly_sum"
			android:title="@string/clean_hourly_title"
			app:iconSpaceReserved="false"
			app:showSeekBarValue="true" />
		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="clean_clipboard"
			android:persistent="true"
			android:summary="@string/clear_clipboard_sum"
			android:title="@string/clear_clipboard_title"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="auto_white"
			android:persistent="true"
			android:summary="@string/autowhite_sum"
			android:title="@string/auto_whitelist"
			app:iconSpaceReserved="false" />
		<SeekBarPreference
			android:min="1"
			android:max="10"
			android:defaultValue="3"
			android:key="multi_run"
			android:summary="@string/double_check_sum"
			android:title="@string/double_check_title"
			app:iconSpaceReserved="false"
			app:showSeekBarValue="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/parallel_processing_category" app:iconSpaceReserved="false">
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="parallel_processing"
			android:persistent="true"
			android:summary="@string/parallel_search_delete_sum"
			android:title="@string/parallel_search_delete_title"
			app:iconSpaceReserved="false" />
		<SeekBarPreference
			android:min="1"
			android:max="10"
			android:defaultValue="4"
			android:key="parallel_workers"
			android:summary="@string/parallel_workers_sum"
			android:title="@string/parallel_workers_title"
			app:dependency="parallel_processing"
			app:iconSpaceReserved="false"
			app:showSeekBarValue="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/filters_category_title" app:iconSpaceReserved="false">
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="clean_generic"
			android:persistent="true"
			android:summary="@string/generic_sum"
			android:title="@string/enable_generic_filter"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="clean_empty_file"
			android:persistent="true"
			android:title="@string/delete_empty_files"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="clean_empty_folder"
			android:persistent="true"
			android:title="@string/delete_empty_folders"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="clean_corpse"
			android:persistent="true"
			android:summary="@string/corpse_summary"
			android:title="@string/corpse_title"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="clean_apk"
			android:persistent="true"
			android:summary="@string/apk_sum"
			android:title="@string/delete_apk_files"
			app:iconSpaceReserved="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/elevated_access_title" app:iconSpaceReserved="false">
		<Preference
			android:key="shizuku_status"
			android:title="@string/shizuku_status_title"
			android:summary="@string/shizuku_status_dead"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="use_shizuku"
			android:persistent="true"
			android:title="@string/use_shizuku_title"
			android:summary="@string/use_shizuku_sum"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="clean_internal"
			android:persistent="true"
			android:title="@string/clean_internal_title"
			android:summary="@string/clean_internal_sum"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="clean_sd_card"
			android:persistent="true"
			android:title="@string/clean_sd_card_title"
			android:summary="@string/clean_sd_card_sum"
			app:iconSpaceReserved="false" />
		<Preference
			android:key="adb_script_helper"
			android:title="@string/adb_script_title"
			android:summary="@string/adb_script_sum"
			app:iconSpaceReserved="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/other" app:iconSpaceReserved="false">
		<ListPreference
			android:key="theme"
			android:defaultValue="dark"
			android:entries="@array/themes_val"
			android:entryValues="@array/themes_key"
			android:summary="@string/theme_sum"
			android:persistent="true"
			android:title="@string/theme_title"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="close_bg_apps"
			android:persistent="true"
			android:summary="@string/stopbgapps_sum"
			android:title="@string/stopbgapps_title"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="pitch_black"
			android:title="@string/pitchBlack"
			android:summary="@string/pitchBlack_sum"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="dynamic_color"
			android:persistent="true"
			android:summary="@string/dynColor_sum"
			android:title="@string/dynColor"
			app:iconSpaceReserved="false" />
		<Preference
			android:title="@string/data_import"
			android:key="data_import"
			android:summary="@string/data_import_sum"
			app:iconSpaceReserved="false" />
		<Preference
			android:title="@string/data_export"
			android:key="data_export"
			android:summary="@string/data_export_sum"
			app:iconSpaceReserved="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/about" app:iconSpaceReserved="false">
		<Preference
			android:title="@string/sourceCode"
			android:key="__link_gh"
			android:summary="@string/sourceCode_sum"
			app:iconSpaceReserved="false">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="https://github.com/mdp43140/LTECleanerFOSS" />
		</Preference>
		<Preference
			android:title="@string/license"
			android:key="__link_dl"
			android:summary="@string/license_sum"
			app:iconSpaceReserved="false">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="https://github.com/mdp43140/LTECleanerFOSS/blob/master/LICENSE" />
		</Preference>
	</PreferenceCategory>
</PreferenceScreen>
